footer fix and home alignment

--- a/Church/Styles/GloryGHomeStyles.css
+++ b/Church/Styles/GloryGHomeStyles.css
@@ -212,7 +212,7 @@ background-position-x: -10;
         .grid-item2 iframe{
             width: 80%; 
             
-            height: 550px; 
+            height: 450px; 
             border: 0;
            
         }
